--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/CodeLibrarySubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/CodeLibrarySubPage.xaml
@@ -26,16 +26,6 @@
     </interactivity:Interaction.Behaviors>
     <UserControl.Resources>
 
-        <!--Request open file command-->
-        <XamlUICommand
-            x:Key="RequestOpenFileCommand"
-            Command="{x:Bind ViewModel.RequestOpenFileCommand}"/>
-
-        <!--Open file command-->
-        <XamlUICommand
-            x:Key="OpenFileCommand"
-            Command="{x:Bind ViewModel.OpenFileCommand}"/>
-
         <!--Toggle favorite command-->
         <XamlUICommand
             x:Key="ToggleFavoriteCommand"
@@ -44,11 +34,6 @@
         <!--History placeholder-->
         <DataTemplate x:Key="HistoryPlaceholder">
             <Border Background="Transparent">
-                <interactivity:Interaction.Behaviors>
-                    <core:EventTriggerBehavior EventName="Tapped">
-                        <core:InvokeCommandAction Command="{StaticResource RequestOpenFileCommand}"/>
-                    </core:EventTriggerBehavior>
-                </interactivity:Interaction.Behaviors>
                 <Grid ColumnSpacing="12">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="48"/>
@@ -91,13 +76,6 @@
                         </MenuFlyoutItem>
                     </MenuFlyout>
                 </StackPanel.ContextFlyout>
-                <interactivity:Interaction.Behaviors>
-                    <core:EventTriggerBehavior EventName="Tapped">
-                        <core:InvokeCommandAction
-                            Command="{StaticResource OpenFileCommand}"
-                            CommandParameter="{x:Bind}"/>
-                    </core:EventTriggerBehavior>
-                </interactivity:Interaction.Behaviors>
                 <TextBlock
                     Text="{x:Bind Title}"
                     FontWeight="Normal"
@@ -179,6 +157,9 @@
                     VerticalAlignment="Stretch"
                     IsItemClickEnabled="True"
                     SelectionMode="None">
+                    <interactivity:Interaction.Behaviors>
+                        <core:ItemClickBehavior Command="{x:Bind ViewModel.ProcessItemCommand}"/>
+                    </interactivity:Interaction.Behaviors>
                     <ListView.Resources>
                         <Style x:Key="BaseCodeLibraryEntryItemContainerStyle" TargetType="ListViewItem">
                             <Setter Property="Margin" Value="0,0,0,0"/>
