--- a/src/Brainf_ckSharp.UWP/Resources/Dictionaries/MDL2Icons.xaml
+++ b/src/Brainf_ckSharp.UWP/Resources/Dictionaries/MDL2Icons.xaml
@@ -17,7 +17,7 @@
     <x:String x:Key="DebugIcon">&#xEBE8;</x:String>
     <x:String x:Key="MemoryStateIcon">&#xE74C;</x:String>
     <x:String x:Key="ClearIcon">&#xE10A;</x:String>
-    <x:String x:Key="DeleteIcon">&#xE750;</x:String>
+    <x:String x:Key="DeleteKeyIcon">&#xE750;</x:String>
     <x:String x:Key="MoveIcon">&#xE759;</x:String>
     <x:String x:Key="NewLineIcon">&#xE751;</x:String>
     <x:String x:Key="UndoIcon">&#xE10E;</x:String>
@@ -39,5 +39,6 @@
     <x:String x:Key="ShareIcon">&#xE72D;</x:String>
     <x:String x:Key="CopyToClipboardIcon">&#xE8C8;</x:String>
     <x:String x:Key="RemoveFromLibraryIcon">&#xE295;</x:String>
+    <x:String x:Key="DeleteFileIcon">&#xE107;</x:String>
     
 </ResourceDictionary>
