Fixed initial line indicator UI in the IDE

--- a/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckIde/Brainf_ckIde.xaml
+++ b/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckIde/Brainf_ckIde.xaml
@@ -45,7 +45,8 @@
             <TextBlock
                 x:Name="LineBlock"
                 Width="28"
-                FontSize="15"
+                Text="1"
+                FontSize="{x:Bind CodeEditBox.FontSize, Mode=OneWay}"
                 Foreground="#FF237CAD"
                 VerticalAlignment="Top"
                 HorizontalAlignment="Right"
