--- a/src/Brainf_ckSharp.UWP/Resources/Dictionaries/MDL2Icons.xaml
+++ b/src/Brainf_ckSharp.UWP/Resources/Dictionaries/MDL2Icons.xaml
@@ -34,8 +34,10 @@
     <x:String x:Key="UserGuideIcon">&#xE82D;</x:String>
 
     <!--Code library-->
-    <x:String x:Key="AddToFavoritesIcon">&#xE00A;</x:String>
-    <x:String x:Key="RemoveFromFavoritesIcon">&#xE8D9;</x:String>
+    <x:String x:Key="FavoriteSectionIcon">&#xE006;</x:String>
+    <x:String x:Key="RecentSectionIcon">&#xE155;</x:String>
+    <x:String x:Key="AddToFavoritesIcon">&#xE00B;</x:String>
+    <x:String x:Key="RemoveFromFavoritesIcon">&#xE00C;</x:String>
     <x:String x:Key="ShareIcon">&#xE72D;</x:String>
     <x:String x:Key="CopyToClipboardIcon">&#xE8C8;</x:String>
     <x:String x:Key="RemoveFromLibraryIcon">&#xE295;</x:String>
