--- a/src/Brainf_ckSharp.UWP/Controls/SubPages/Host/SubPageHost.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/SubPages/Host/SubPageHost.xaml
@@ -9,7 +9,14 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid x:Name="RootGrid" Background="Transparent">
+    <Grid
+        x:Name="RootGrid"
+        Background="Transparent">
+        <Grid.KeyboardAccelerators>
+            <KeyboardAccelerator
+                Key="Escape"
+                Invoked="{x:Bind SendCloseRequest}"/>
+        </Grid.KeyboardAccelerators>
 
         <!--Visual states-->
         <VisualStateManager.VisualStateGroups>
@@ -109,10 +116,8 @@
                     VerticalAlignment="Top"
                     Height="48" Width="48"
                     Style="{StaticResource ExpandedSquareButtonRevealStyle}"
-                    Click="CloseButton_OnClick">
-                    <Button.KeyboardAccelerators>
-                        <KeyboardAccelerator Key="Escape"/>
-                    </Button.KeyboardAccelerators>
+                    Click="{x:Bind SendCloseRequest}"
+                    ToolTipService.ToolTip="Esc">
                     <SymbolIcon Symbol="Back" Foreground="White"/>
                 </Button>
 
