Hidden Esc key accelerator in popups

--- a/src/Brainf_ckSharp.UWP/Controls/SubPages/Host/SubPageHost.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/SubPages/Host/SubPageHost.xaml
@@ -11,7 +11,8 @@
 
     <Grid
         x:Name="RootGrid"
-        Background="Transparent">
+        Background="Transparent"
+        KeyboardAcceleratorPlacementMode="Hidden">
         <Grid.KeyboardAccelerators>
             <KeyboardAccelerator
                 Key="Escape"
