--- a/src/Brainf_ckSharp.UWP/Controls/Host/InputPanel/MemoryViewer/CompactMemoryViewer.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/Host/InputPanel/MemoryViewer/CompactMemoryViewer.xaml
@@ -6,9 +6,13 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:dataTemplates="using:Brainf_ckSharp.Uwp.Controls.DataTemplates"
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
+    xmlns:controls="using:Brainf_ckSharp.Uwp.ViewModels.Controls"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
+    <UserControl.DataContext>
+        <controls:CompactMemoryViewerViewModel x:Name="ViewModel"/>
+    </UserControl.DataContext>
 
     <!--Memory cells grid-->
     <GridView
