--- a/src/Brainf_ckSharp.UWP/Views/ConsoleView.xaml
+++ b/src/Brainf_ckSharp.UWP/Views/ConsoleView.xaml
@@ -8,9 +8,13 @@
     xmlns:console="using:Brainf_ckSharp.Uwp.Models.Console"
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
     xmlns:functions="using:Brainf_ckSharp.Uwp.Bindings.Functions.Console"
+    xmlns:views="using:Brainf_ckSharp.Uwp.ViewModels.Views"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
+    <UserControl.DataContext>
+        <views:ConsoleViewModel x:Name="ViewModel"/>
+    </UserControl.DataContext>
     <UserControl.Resources>
 
         <!--Command template-->
