--- a/src/Brainf_ckSharp.Uwp/Views/IDEView.xaml
+++ b/src/Brainf_ckSharp.Uwp/Views/IDEView.xaml
@@ -5,9 +5,17 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ide="using:Brainf_ckSharp.Uwp.Controls.Ide"
+    xmlns:views="using:Brainf_ckSharp.Uwp.ViewModels.Views"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
+    <UserControl.DataContext>
+        <views:IdeViewModel
+            CharacterAdded="ViewModelCharacterAdded"
+            CharacterDeleted="ViewModel_CharacterDeleted"
+            CodeLoaded="ViewModel_CodeLoaded"
+            CodeSaved="ViewModel_CodeSaved"/>
+    </UserControl.DataContext>
 
     <!--IDE-->
     <ide:Brainf_ckIde x:Name="CodeEditor"/>
